[CSS] Fix selector symbol index (#2071)
* [CSS] Fix selector symbol index

Fixes #2057

This commit modifies the `meta.selector` lookahead in order to exclude
leading whitespace.

Whitespace between entities and after the last one keep untouched.

* [CSS] Add selector separator scope

This commit adds `punctuation.separator.sequence` scope to the `,`
separator of the selectors.

--- a/CSS/syntax_test_css.css
+++ b/CSS/syntax_test_css.css
@@ -39,16 +39,28 @@
 /* < punctuation.section.property-list.css */
 
     .classname {}
+/*^^ - meta.selector.css  */
 /*  ^^^^^^^^^^^ meta.selector.css */
+/*             ^^ - meta.selector.css  */
 /*  ^          punctuation.definition.entity.css     */
 /*   ^^^^^^^^^ entity.other.attribute-name.class.css */
 
     #id {}
+/*^^ - meta.selector.css  */
+/*  ^^^^ meta.selector.css */
+/*      ^^ - meta.selector.css  */
 /*  ^   punctuation.definition.entity.css  */
 /*   ^^ entity.other.attribute-name.id.css */
 
-    html {}
+    html, h1 {}
+/*^^ - meta.selector.css  */
+/*  ^^^^^^^^^ meta.selector.css */
+/*           ^^ - meta.selector.css  */
 /*  ^^^^ entity.name.tag.css */
+/*      ^ punctuation.separator.sequence.css */
+/*        ^^ entity.name.tag.css */
+/*           ^ punctuation.section.property-list.css */
+/*            ^ punctuation.section.property-list.css */
 
     @charset "UTF-8";
 /*  ^^^^^^^^^^^^^^^^ meta.at-rule.charset.css */
@@ -365,12 +377,16 @@
 
 /* Test Functional Pseudo Class Meta Scopes */
 .test:nth-child(even) {}
+/*^^^^^^^^^^^^^^^^^^^^ meta.selector.css                     */
+/*                    ^ - meta.selector.css                  */
 /*   ^^^^^^^^^^^^^^^^ meta.function-call.css                 */
 /*             ^^^^^^ meta.group.css                         */
 /*             ^      punctuation.definition.group.begin.css */
 /*                  ^ punctuation.definition.group.end.css   */
 
 .test-pseudo-classes:nth-child(2):hover {}
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ meta.selector.css                */
+/*                                      ^ - meta.selector.css             */
 /*                   ^^^^^^^^^          entity.other.pseudo-class.css     */
 /*                             ^        constant.numeric.css              */
 /*                               ^      punctuation.definition.entity.css */
